[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/KleintenDynFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/MainScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/MainScreen.tres" type="Theme" id=3]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_top = 2.43578
margin_right = 185.0
margin_bottom = 129.436
custom_fonts/font = ExtResource( 1 )
text = "I recommend using downloadable builds instead of web to avoid performance issues"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsSetting" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -217.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 1 )
text = "Current setting: High"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.697
margin_top = 30.4056
margin_right = -36.6973
margin_bottom = 98.4056
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsHigh" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 16.0
text = "set graphics high"

[node name="GraphicsMed" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 20.0
margin_right = 122.0
margin_bottom = 36.0
text = "set graphics med"

[node name="GraphicsLow" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 40.0
margin_right = 122.0
margin_bottom = 56.0
text = "set graphics low"

[node name="Play" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -10.0
margin_right = 19.0
margin_bottom = 10.0
theme = ExtResource( 3 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
